--- a/audit-artifacts/real-code/frontend/tsconfig.json
+++ b/audit-artifacts/real-code/frontend/tsconfig.json
@@ -9,7 +9,7 @@
       "DOM.Iterable",
       "ESNext"
     ],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": [
