--- a/package.json
+++ b/package.json
@@ -72,7 +72,26 @@
     "*.{js,jsx,ts,tsx,json}": "eslint --fix"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.0",
-    "supertest": "^7.1.1"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/next": "^9.0.0",
+    "@types/react": "^18.3.3",
+    "@types/tailwindcss": "^3.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "execa": "^9.6.0",
+    "express": "^5.1.0",
+    "lucide-react": "^0.522.0",
+    "next": "^15.3.4",
+    "pg": "^8.16.2",
+    "playwright": "^1.53.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "supertest": "^7.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10"
   }
 }
