chore(strato): permitir archivos de configuración esenciales en raíz y packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,5 +33,10 @@
         "@typescript-eslint/no-var-requires": "off"
       }
     }
+  ],
+  "ignorePatterns": [
+    "**/.eslintrc.cjs",
+    "dist",
+    "audit-artifacts"
   ]
 }
