--- a/package.json
+++ b/package.json
@@ -33,18 +33,24 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@playwright/test": "^1.53.1",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
     "@types/inquirer": "^9.0.8",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
+    "@types/node-fetch": "^2.6.12",
+    "@types/pino": "^7.0.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/tailwindcss": "^3.1.0",
     "@types/uuid": "^10.0.0",
     "@types/yargs": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "@vitest/coverage-v8": "^3.2.4",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -56,16 +62,24 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^16.1.2",
     "minimatch": "^10.0.3",
+    "msw": "^2.10.2",
+    "pino": "^9.7.0",
+    "pino-http": "^10.5.0",
+    "playwright": "^1.53.1",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "react-router-dom": "^6.30.1",
     "supabase": "^2.26.9",
+    "tailwindcss": "^4.1.10",
     "ts-morph": "^26.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1",
     "uuid": "^11.1.0",
     "vitest": "^3.2.4",
+    "yargs": "^18.0.0",
     "zod": "^3.25.67"
   },
   "lint-staged": {
@@ -78,7 +92,6 @@
     "@testing-library/react": "^16.3.0",
     "@types/next": "^9.0.0",
     "@types/react": "^18.3.3",
-    "@types/tailwindcss": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -87,11 +100,9 @@
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
     "pg": "^8.16.2",
-    "playwright": "^1.53.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "supertest": "^7.1.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10"
+    "tailwind-merge": "^3.3.1"
   }
 }
