--- a/packages/db-types/package.json
+++ b/packages/db-types/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "types": "./index.d.ts",
   "scripts": {
     "lint": "eslint . --max-warnings 0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
