--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "dotenv": "^16.5.0",
     "execa": "^9.6.0",
     "express": "^5.1.0",
+    "inquirer": "^12.6.3",
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
     "pg": "^8.16.2",
