--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,8 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "eslint .",
-    "test": "vitest run --coverage --exclude=tests-e2e/**",
-    "test:e2e": "playwright test"
+    "test": "vitest run --exclude=tests-e2e/**",
+    "test:e2e": "playwright test tests-e2e",
+    "test:e2e:ci": "start-server-and-test dev http://localhost:3000 test:e2e",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -23,12 +26,19 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-interactions": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
+    "@storybook/testing-react": "2.0.1",
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/storybook__react": "^5.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "8",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,6 +48,8 @@
     "msw": "^2.10.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
+    "start-server-and-test": "^2.0.12",
+    "storybook": "8.6.14",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
