--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -8,7 +8,7 @@
       "DOM.Iterable",
       "ESNext"
     ],
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
       "@/*": [
