--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react-router-dom": "^6.30.1",
+    "storybook": "^9.0.13",
     "supabase": "^2.26.9",
     "tailwindcss": "^4.1.10",
     "ts-morph": "^26.0.0",
