--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "inquirer": "^12.6.3",
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
+    "node-cron": "^3.0.3",
     "pg": "^8.16.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
