--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
     "@types/stripe": "^8.0.417",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "7.0.0",
     "openai": "^5.6.0",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
