--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "7.0.0",
+    "helmet": "7.0.0",
     "openai": "^5.6.0",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
