--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "dotenv": "^16.5.0",
     "execa": "^9.6.0",
     "express": "^5.1.0",
+    "fs-extra": "11.2.0",
     "inquirer": "^12.6.3",
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
@@ -106,6 +107,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "supertest": "^7.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tar": "6.2.0"
   }
 }
