docs(strato): compendio y validación de módulos .md y reglas STRATO READY

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
   "ignorePatterns": [
     "**/.eslintrc.cjs",
     "dist",
-    "audit-artifacts"
+    "audit-artifacts",
+    "apps/backend/vitest.config.ts"
   ]
 }
