--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "NODE_ENV=development dotenv -e ../../.env -- tsx ./src/start.ts",
     "build": "tsc",
     "test": "dotenv -e ../../.env.test -- vitest run",
+    "test:coverage": "dotenv -e ../../.env.test -- vitest run --coverage --coverage.reporter=json",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -28,7 +29,6 @@
   },
   "devDependencies": {
     "@solana/wallet-standard-features": "^1.3.0",
-    "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
