--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run --exclude=tests-e2e/**",
     "test:e2e": "playwright test tests-e2e",
     "test:e2e:ci": "start-server-and-test dev http://localhost:3000 test:e2e",
+    "test:coverage": "vitest run --coverage --coverage.reporter=json",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
