--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "db:new": "supabase migrations new",
     "db:push": "supabase db push --db-url \"postgresql://postgres:postgres@127.0.0.1:54322/postgres\"",
     "module:create": "node ./scripts/create-module.mjs",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "strato:audit": "tsx scripts/audit/audit-system.ts"
   },
   "keywords": [
     "saas",
