--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-istanbul": "3.2.4",
     "dotenv-cli": "^8.0.0",
     "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
