--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,23 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@repo/typescript-config/*": ["packages/typescript-config/*"],
-      "@repo/db-types": ["packages/db-types"],
-      "@repo/db-types/*": ["packages/db-types/*"]
-    },
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "esModuleInterop": true,
-    "moduleResolution": "node16",
-    "target": "es2017",
-    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
-    "module": "Node16"
-  }
-}
+    "jsx": "react-jsx",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "paths": {
+      "@repo/db-types": ["packages/db-types"]
+    }
+  },
+  "exclude": ["node_modules"]
+} 
