--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "@vitest/coverage-istanbul": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
