fix: configure React global for JSX tests to prevent 'React is not defined' error
- Add React global configuration in vitest.setup.ts
- Tests now work without explicit React imports (21/21 passing)
- Clean linting without errors
- Add check-react-imports.ts script as safety layer
- TypeScript config with jsx: 'react-jsx' and ESLint with react-in-jsx-scope: off
- Permanent solution that prevents CI/CD errors

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck": "turbo typecheck",
     "format": "prettier --write .",
     "clean": "turbo clean && rm -rf node_modules",
-    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi"
+    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
+    "check-react-imports": "tsx scripts/check-react-imports.ts"
   },
   "keywords": [
     "saas",
