test: robust backend test mocks for Supabase, Stripe, OpenAI, and env vars in CI
- Mock de Supabase extendido para todos los métodos usados en tests
- Mock de signInWithPassword para credenciales correctas/incorrectas
- Ajuste de tests de auth para email fijo
- Ajuste de tests de Stripe y OpenAI para mensajes de error reales
- Variables de entorno de test aseguradas
- Facilita que los tests pasen en CI/CD sin dependencias externas
- Fix tsconfig para incluir vitest.setup.ts en linting y typecheck
- Fix linting en mock de Stripe y afterAll importado

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -5,6 +5,6 @@
     "noEmit": false,
     "baseUrl": "../.."
   },
-  "include": ["src", "src/types", "tests"],
+  "include": ["src", "src/types", "tests", "vitest.setup.ts"],
   "exclude": ["node_modules"]
 } 
