--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -32,8 +32,8 @@ jobs:
       - name: 5. Run Lint
         run: pnpm run lint
 
-      - name: 6. Run Tests
-        run: pnpm run test
+      - name: 6. Run Unit Tests
+        run: pnpm run test:unit
 
       - name: 7. Run Build
         run: pnpm run build
