--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "@solana/wallet-standard-features": "^1.3.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-istanbul": "3.2.4",
