fix(web): resuelve errores de build de Next.js y configuración TypeScript

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,8 +10,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
