--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "clean": "turbo clean && rm -rf node_modules",
     "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
     "check-react-imports": "tsx scripts/check-react-imports.ts",
-    "validate-traceability": "tsx scripts/validate-traceability.ts"
+    "validate-traceability": "tsx scripts/validate-traceability.ts",
+    "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts"
   },
   "keywords": [
     "saas",
