chore: apply formatting and lint fixes
- Applied prettier/eslint formatting to multiple files
- Fixed trailing commas and spacing in QA agent files
- Updated documentation files with consistent formatting
- Improved code style consistency across the codebase
- Fixed TypeScript lint errors in backend index.ts

#strato #formatting #lint

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
     "check-react-imports": "tsx scripts/check-react-imports.ts",
     "validate-traceability": "tsx scripts/validate-traceability.ts",
-    "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts"
+    "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts",
+    "qa:audit": "tsx scripts/agents/qa/index.ts",
+    "qa:runner": "tsx scripts/agents/qa/index.ts --mode runner",
+    "qa:test": "vitest scripts/agents/qa/ --run"
   },
   "keywords": [
     "saas",
