--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,7 +27,13 @@
     "posthog-node": "^5.1.1",
     "resend": "^4.6.0",
     "stripe": "^18.2.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "compression": "^1.7.4",
+    "redis": "^4.6.11",
+    "node-cache": "^5.1.2",
+    "express-slow-down": "^2.0.1",
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@solana/wallet-standard-features": "^1.3.0",
@@ -41,6 +47,16 @@
     "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
