--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,42 +18,43 @@
     "@repo/db-types": "workspace:*",
     "@supabase/supabase-js": "^2.50.0",
     "@types/stripe": "^8.0.417",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "7.0.0",
+    "express-slow-down": "^2.0.1",
+    "express-validator": "^7.0.1",
     "helmet": "7.0.0",
+    "node-cache": "^5.1.2",
     "openai": "^5.6.0",
+    "path-to-regexp": "^6.2.0",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
     "posthog-node": "^5.1.1",
+    "redis": "^4.6.11",
     "resend": "^4.6.0",
     "stripe": "^18.2.1",
-    "zod": "^3.25.67",
-    "compression": "^1.7.4",
-    "redis": "^4.6.11",
-    "node-cache": "^5.1.2",
-    "express-slow-down": "^2.0.1",
-    "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@solana/wallet-standard-features": "^1.3.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "@vitest/coverage-istanbul": "3.2.4",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^8.56.0",
     "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
     "tsx": "^4.20.3",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
