--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.25",
     "next": "^15.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
