🚀 feat: Setup NestJS backend parallel to Express
- Add NestJS backend in apps/backend-nest/ (port 3002)
- Migrate analytics module as example with proper TypeScript types
- Add health check endpoint
- Update package.json with new scripts for both backends
- Create NESTJS_MIGRATION.md documentation
- Update .cursorrules with NestJS architecture
- Both backends run simultaneously without conflicts
- Zero downtime migration strategy implemented
- Fix TypeScript linting errors with proper interfaces

Migration Status:
✅ Setup parallel infrastructure
✅ Analytics module migrated with types
✅ Health check working
✅ Documentation complete
🔄 Ready for gradual module migration

--- a/package.json
+++ b/package.json
@@ -8,28 +8,35 @@
   "license": "MIT",
   "packageManager": "pnpm@9.7.0",
   "scripts": {
-    "dev": "turbo run dev --parallel",
+    "dev": "turbo run dev",
     "dev:frontend": "turbo run dev --filter=frontend",
     "dev:backend": "turbo run dev --filter=backend",
     "build": "turbo run build",
     "build:frontend": "turbo run build --filter=frontend",
     "build:backend": "turbo run build --filter=backend",
-    "lint": "turbo lint",
+    "lint": "turbo run lint",
     "lint:fix": "turbo lint -- --fix",
-    "test": "turbo test",
+    "test": "turbo run test",
     "test:unit": "turbo test --filter=unit",
     "test:watch": "turbo test:watch",
-    "test:coverage": "turbo test:coverage",
+    "test:coverage": "turbo run test:coverage",
     "typecheck": "turbo typecheck",
-    "format": "prettier --write .",
-    "clean": "turbo clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "clean": "turbo run clean",
     "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
     "check-react-imports": "tsx scripts/check-react-imports.ts",
     "validate-traceability": "tsx scripts/validate-traceability.ts",
     "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts",
     "qa:audit": "tsx scripts/agents/qa/index.ts",
     "qa:runner": "tsx scripts/agents/qa/index.ts --mode runner",
-    "qa:test": "vitest scripts/agents/qa/ --run"
+    "qa:test": "vitest scripts/agents/qa/ --run",
+    "dev:express": "cd apps/backend && pnpm dev",
+    "dev:nest": "cd apps/backend-nest && pnpm start:dev",
+    "dev:both": "concurrently \"pnpm dev:express\" \"pnpm dev:nest\"",
+    "build:express": "cd apps/backend && pnpm build",
+    "build:nest": "cd apps/backend-nest && pnpm build",
+    "test:express": "cd apps/backend && pnpm test",
+    "test:nest": "cd apps/backend-nest && pnpm test"
   },
   "keywords": [
     "saas",
