--- a/apps/backend-nest/package.json
+++ b/apps/backend-nest/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
     "@nestjs/platform-express": "^11.1.3",
+    "class-validator": "^0.14.1",
+    "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
