--- a/apps/backend-nest/package.json
+++ b/apps/backend-nest/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/throttler": "^6.4.0",
     "@supabase/supabase-js": "^2.50.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
