feat: add release checker script and update .gitignore
- Added release-checker.mjs script for release validation
- Updated .gitignore to exclude temporary and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ junit.xml
 .svelte-kit
 .netlify
 .turbo/cookies/.turbo/cookies/
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
