feat(agents): complete @data agent implementation following STRATO template
- Add autofix.ts with main agent logic and dry-run support
- Add commands.ts with CLI interface and multiple modes
- Add config.ts with Zod validation and modular configuration
- Add log.ts with structured logging system
- Add report.ts with JSON report generation
- Update index.ts to follow STRATO template standard
- Add comprehensive unit tests for all components
- Connect agent to orchestrator and add CLI commands
- Ensure strict TypeScript typing without any usage
- Add proper error handling and logging throughout

Agent now supports: run, validate, test, migrate, seed, backup, analytics modes
Status: 100% complete according to STRATO agent template

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "qa:audit": "tsx scripts/agents/qa/index.ts",
     "qa:runner": "tsx scripts/agents/qa/index.ts --mode runner",
     "qa:test": "vitest scripts/agents/qa/ --run",
+    "agent:data": "tsx scripts/agents/data/index.ts",
+    "agent:data:test": "vitest scripts/agents/data/__tests__/ --run",
+    "qa:coverage-audit": "tsx scripts/qa/run-test-coverage-audit.ts",
+    "qa:coverage-audit:basic": "tsx scripts/qa/audit-test-coverage.ts",
     "dev:express": "cd apps/backend && pnpm dev",
     "dev:nest": "cd apps/backend-nest && pnpm start:dev",
     "dev:both": "concurrently \"pnpm dev:express\" \"pnpm dev:nest\"",
