--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -45,7 +45,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "@vitest/coverage-istanbul": "3.2.4",
+    "@vitest/coverage-istanbul": "^1.6.1",
     "dotenv-cli": "^8.0.0",
     "eslint": "^8.56.0",
     "pg": "^8.16.2",
@@ -53,7 +53,7 @@
     "supertest": "^7.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^1.6.1"
   },
   "engines": {
     "node": ">=20.0.0"
