--- a/package.json
+++ b/package.json
@@ -14,18 +14,28 @@
     "build": "turbo run build",
     "build:frontend": "turbo run build --filter=frontend",
     "build:backend": "turbo run build --filter=backend",
+    "build:check": "turbo run build --dry-run",
     "lint": "turbo run lint",
     "lint:fix": "turbo lint -- --fix",
+    "lint:strict": "turbo run lint --strict",
     "test": "turbo run test",
     "test:unit": "turbo test --filter=unit",
     "test:watch": "turbo test:watch",
     "test:coverage": "turbo run test:coverage",
+    "test:coverage:check": "turbo run test:coverage --check",
+    "test:strict": "turbo run test --strict",
     "typecheck": "turbo typecheck",
+    "typecheck:strict": "turbo typecheck --strict",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "clean": "turbo run clean",
-    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
+    "prepare": "husky",
     "check-react-imports": "tsx scripts/check-react-imports.ts",
     "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts",
+    "strato:guard": "pnpm run lint && pnpm run typecheck && pnpm run test",
+    "strato:guard:strict": "pnpm run lint:strict && pnpm run typecheck:strict && pnpm run test:strict && pnpm run build:check",
+    "security:check": "tsx scripts/security-check.ts",
+    "deps:check": "pnpm audit && pnpm outdated",
+    "merge:prepare": "bash scripts/hooks/prepare-merge-to-main.sh",
     "qa:audit": "tsx scripts/agents/qa/index.ts",
     "qa:runner": "tsx scripts/agents/qa/index.ts --mode runner",
     "qa:test": "vitest scripts/agents/qa/ --run",
