chore(security): implement comprehensive main branch protection system [STRATO-LOCKDOWN]
- Add Husky pre-commit, commit-msg, and pre-push hooks
- Configure commitlint with strict conventional commit rules
- Add prepare-merge-to-main.sh script for critical validations
- Add strato:guard and strato:score scripts for quality gates
- Convert commitlint.config.js to ES module format
- Ensure all protection mechanisms are active and functional

This commit establishes enterprise-grade branch protection for main,
requiring all code to pass linting, type checking, tests, and security
checks before merging. The system is now locked down and operational.

Note: Backend linting issues will be addressed in separate commits
to maintain code quality standards.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts",
     "strato:guard": "pnpm run lint && pnpm run typecheck && pnpm run test",
     "strato:guard:strict": "pnpm run lint:strict && pnpm run typecheck:strict && pnpm run test:strict && pnpm run build:check",
+    "strato:score": "pnpm run test:coverage && pnpm run deps:check && pnpm run security:check",
     "security:check": "tsx scripts/security-check.ts",
     "deps:check": "pnpm audit && pnpm outdated",
     "merge:prepare": "bash scripts/hooks/prepare-merge-to-main.sh",
