fix(scripts): remove invalid --strict flags from turbo commands
- Remove lint:strict, test:strict, and typecheck:strict scripts that don't work with turbo
- Fix strato:guard:strict to use valid turbo commands
- Ensure pre-push hook works correctly with proper script definitions

--- a/package.json
+++ b/package.json
@@ -17,22 +17,19 @@
     "build:check": "turbo run build --dry-run",
     "lint": "turbo run lint",
     "lint:fix": "turbo lint -- --fix",
-    "lint:strict": "turbo run lint --strict",
     "test": "turbo run test",
     "test:unit": "turbo test --filter=unit",
     "test:watch": "turbo test:watch",
     "test:coverage": "turbo run test:coverage",
     "test:coverage:check": "turbo run test:coverage --check",
-    "test:strict": "turbo run test --strict",
     "typecheck": "turbo typecheck",
-    "typecheck:strict": "turbo typecheck --strict",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "clean": "turbo run clean",
     "prepare": "husky",
     "check-react-imports": "tsx scripts/check-react-imports.ts",
     "strato:defense:validate": "pnpm tsx scripts/pre-commit-validation.ts",
     "strato:guard": "pnpm run lint && pnpm run typecheck && pnpm run test",
-    "strato:guard:strict": "pnpm run lint:strict && pnpm run typecheck:strict && pnpm run test:strict && pnpm run build:check",
+    "strato:guard:strict": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run build:check",
     "strato:score": "pnpm run test:coverage && pnpm run deps:check && pnpm run security:check",
     "security:check": "tsx scripts/security-check.ts",
     "deps:check": "pnpm audit && pnpm outdated",
