🔧 chore: Update .gitignore to exclude agent artifacts
- Add audit-artifacts/backups/ to ignore list
- Add scripts/agents/test-output/ to ignore list
- Add test-output/ to ignore list
- Add agent report files to ignore list
- Clean up staging area from backup files

This prevents agent-generated backup files from being tracked in git.

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,11 @@ apps/frontend/node_modules/
 apps/frontend/supabase/
 apps/frontend/examples/
 
+# Agent artifacts and backups
+audit-artifacts/backups/
+scripts/agents/test-output/
+test-output/
+AGENT_AUDIT_REPORT.md
+~BUSINESS_MODULES_AUDIT.md
+~REPO_INVENTORY.md
+
