--- a/apps/backend-nest/package.json
+++ b/apps/backend-nest/package.json
@@ -49,6 +49,7 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
