--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -43,11 +43,11 @@
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "8.36.0",
+    "@typescript-eslint/parser": "8.36.0",
     "@vitest/coverage-istanbul": "^1.6.1",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "8.57.1",
     "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
