--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -39,6 +39,7 @@
     "@solana/wallet-standard-features": "^1.3.0",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.4",
@@ -48,6 +49,8 @@
     "@vitest/coverage-istanbul": "^1.6.1",
     "dotenv-cli": "^8.0.0",
     "eslint": "8.57.1",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.0",
     "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
