--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@types/express": "^5.0.3",
     "@types/stripe": "^8.0.417",
+    "@types/uuid": "^10.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -33,6 +34,7 @@
     "redis": "^4.6.11",
     "resend": "^4.6.0",
     "stripe": "^18.2.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
