--- a/apps/backend-nest/package.json
+++ b/apps/backend-nest/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "helmet": "7.0.0",
+    "pino": "^9.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
