--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "vitest run",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:integration": "node scripts/test-integration.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.3",
