--- a/apps/backend-nest/package.json
+++ b/apps/backend-nest/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@supabase/supabase-js": "^2.50.0",
     "@types/helmet": "^4.0.0",
